force-app/main/default/objects/sma__MATerritoryAggregation__c/sma__MATerritoryAggregation__c.object-meta.xml
<CustomObject>
    <label>MapAnything Territory Aggregation</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MapAnything Territory Aggregations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>