force-app/main/default/objects/sma__MATerritoryAggregation__c/fields/sma__Count__c.field-meta.xml
<CustomField>
    <fullName>sma__Count__c</fullName>
    <label>Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>