force-app/main/default/objects/sma__MATerritoryAggregation__c/fields/sma__IsActive__c.field-meta.xml
<CustomField>
    <fullName>sma__IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>