force-app/main/default/objects/sma__MATerritoryAggregation__c/fields/sma__MAIOAggregatorKey__c.field-meta.xml
<CustomField>
    <fullName>sma__MAIOAggregatorKey__c</fullName>
    <label>MAIO Aggregator Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>