force-app/main/default/objects/sma__MATerritoryAggregation__c/fields/sma__MATerritoryAggregationSetting__c.field-meta.xml
<CustomField>
    <fullName>sma__MATerritoryAggregationSetting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MA Territory Aggregation Setting</label>
    <referenceTo>sma__MATerritoryAggregationSetting__c</referenceTo>
    <relationshipLabel>MapAnything Territory Aggregations</relationshipLabel>
    <relationshipName>MATerritoryAggregations</relationshipName>
    <type>Lookup</type>
</CustomField>