force-app/main/default/objects/sma__MATerritoryAggregation__c/fields/sma__MATerritoryNode__c.field-meta.xml
<CustomField>
    <fullName>sma__MATerritoryNode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MapAnything Territory Node</label>
    <referenceTo>sma__MATerritoryNode__c</referenceTo>
    <relationshipLabel>MapAnything Territory Aggregations</relationshipLabel>
    <relationshipName>MATerritoryAggregations</relationshipName>
    <type>Lookup</type>
</CustomField>