force-app/main/default/objects/sma__MATerritoryAggregation__c/fields/sma__Reason__c.field-meta.xml
<CustomField>
    <fullName>sma__Reason__c</fullName>
    <label>Deactivation Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>