force-app/main/default/objects/sma__MATerritoryAggregation__c/fields/sma__Sum__c.field-meta.xml
<CustomField>
    <fullName>sma__Sum__c</fullName>
    <label>Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>